# good_reads_v3

./: Cargo.toml
data/: CHILDREN_BOOKS.csv  CHILDREN_REVIEWS.csv  COMICS_BOOKS.csv  COMICS_REVIEWS.csv  MYSTERY_BOOKS.csv  POETRY_BOOKS.csv
src/: common.rs  data_load.rs  graph_analyze.rs  graph_build.rs  lib.rs  main.rs  ui.rs
